--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>cby2</title>
     <!-- Bootstrap 4 CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -21,34 +22,52 @@
           -o-background-size: cover;
           background-size: cover;
       }
-
+      .navbar-nav .nav-link {
+        font-size: 20px;
+        font-family: Microsoft JhengHei;
+      }
     </style>
 </head>
 <body>
-  <!-- Nav Bar -->  
-  <nav class="navbar navbar-dark navbar-expand-md bg-dark fixed-top">
-      <div class="container">
-          <div class="navbar-collapse collapse" id="navbar10">
-              <ul class="navbar-nav nav-fill w-100">
-                  <li class="nav-item">
-                      <a class="nav-link" id="nav_about_us" href="#about_us">About Us</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="intro.html">Painters</a>
-                  </li>
-                  <li class="nav-item">
-                      <a href="index.html" class="navbar-brand mx-auto d-block text-center order-0 order-md-1 w-25">CBY2</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" id="nav_contact_us" href="#footer">Contact Us</a>
-                  </li>
-              </ul>
-          </div>
-      </div>
+  <!-- Nav Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+   
+    <!-- .navbar-brand 左上LOGO位置 -->
+    <a class="navbar-brand" href="index.html">
+      <!-- <img src="images/H-logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
+      <span class="h3 mx-3">CBY2</span>
+    </a>
+    <!-- .navbar-toggler 漢堡式選單按鈕 -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- .navbar-toggler-icon 漢堡式選單Icon -->
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <!-- .collapse.navbar-collapse 用於外層中斷點群組和隱藏導覽列內容 -->
+    <!-- 選單項目&漢堡式折疊選單 -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+      <ul class="navbar-nav ml-auto">
+        <!-- active表示當前頁面 -->
+        <li class="nav-item mr-5">
+          <a class="nav-link" id="nav_about_us" href="#about_us">關於 CBY2</a>
+        </li>
+        <li class="nav-item mr-5">
+          <a class="nav-link" id="nav_about_us" href="intro.html">畫家介紹</a>
+        </li>
+        <li class="nav-item mr-5">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item mr-5">
+            <a class="nav-link" id="nav_contact_us" href="#footer">聯絡方式</a>
+        </li>
+     </ul>
+    </div>
   </nav>
+
+
+
+
 
 
 
