--- a/index.html
+++ b/index.html
@@ -37,18 +37,16 @@
       <!-- <img src="images/H-logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
       <span class="h3 mx-3">CBY2</span>
     </a>
+
     <!-- .navbar-toggler 漢堡式選單按鈕 -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler mr-4" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
       <!-- .navbar-toggler-icon 漢堡式選單Icon -->
       <span class="navbar-toggler-icon"></span>
     </button>
     
     <!-- .collapse.navbar-collapse 用於外層中斷點群組和隱藏導覽列內容 -->
-    <!-- 選單項目&漢堡式折疊選單 -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
       <ul class="navbar-nav ml-auto">
-        <!-- active表示當前頁面 -->
         <li class="nav-item mr-5">
           <a class="nav-link" id="nav_about_us" href="#about_us">關於 CBY2</a>
         </li>
@@ -64,12 +62,6 @@
      </ul>
     </div>
   </nav>
-
-
-
-
-
-
 
 
     <!-- Main body -->
