modify anchor function

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         font-size: 20px;
         font-family: Microsoft JhengHei;
       }
+      a.anchor {
+          display: block;
+          position: relative;
+          top: -60px;
+          visibility: hidden;
+      }
     </style>
 </head>
 <body>
@@ -106,10 +112,11 @@
         </div>
     </header>
 
-
+    <!-- Anchor: about us -->
+    <a class="anchor" id="about_us"></a>
 
     <!-- Page Content 1 -->
-    <section class="py-5" id="about_us" style="height: 600px;">
+    <section class="py-5" style="height: 500px;">
         <div class="container">
             <h1 class="display-4">About CBY2</h1>
             <p class="lead">The background images for the slider are set directly in the HTML using inline CSS. The images in this snippet are from <a href="https://unsplash.com">Unsplash</a>, taken by <a href="https://unsplash.com/@joannakosinska">Joanna Kosinska</a>!</p>
@@ -117,7 +124,7 @@
     </section>
 
     <!-- Page Content 2 -->
-    <section class="py-5" style="height: 600px; background-color: #e1e5ea;">
+    <section class="py-5" style="height: 500px; background-color: #e1e5ea;">
         <div class="container">
             <div class="row d-flex justify-content-around">
                 <div class="col-4">
@@ -132,7 +139,7 @@
     </section>
 
     <!-- Page Content 3 -->
-    <section class="py-5" style="height: 600px;">
+    <section class="py-5" style="height: 500px;">
         <div class="container">
             <h1 class="display-4">About our services</h1>
             <p class="lead">The background images for the slider are set directly in the HTML using inline CSS. The images in this snippet are from <a href="https://unsplash.com">Unsplash</a>, taken by <a href="https://unsplash.com/@joannakosinska">Joanna Kosinska</a>!</p>
