--- a/intro.html
+++ b/intro.html
@@ -47,9 +47,7 @@
     <!-- .collapse.navbar-collapse 用於外層中斷點群組和隱藏導覽列內容 -->
     <!-- 選單項目&漢堡式折疊選單 -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
       <ul class="navbar-nav ml-auto">
-        <!-- active表示當前頁面 -->
         <li class="nav-item mr-5">
           <a class="nav-link" id="nav_about_us" href="#about_us">關於 CBY2</a>
         </li>
@@ -226,6 +224,11 @@
           $('html, body').animate({
             scrollTop: $(section_to).offset().top
           }, 1000);
+      });
+
+      // Mobile navbar collapse
+      $('.navbar-nav>li>a').on('click', function(){
+          $('.navbar-collapse').collapse('hide');
       });
     </script> 
 </body>
