--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </a>
 
     <!-- .navbar-toggler 漢堡式選單按鈕 -->
-    <button class="navbar-toggler mr-4" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <!-- .navbar-toggler-icon 漢堡式選單Icon -->
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -53,16 +53,16 @@
     <!-- .collapse.navbar-collapse 用於外層中斷點群組和隱藏導覽列內容 -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item mr-5">
+        <li class="nav-item">
           <a class="nav-link" id="nav_about_us" href="#about_us">關於 CBY2</a>
         </li>
-        <li class="nav-item mr-5">
-          <a class="nav-link" id="nav_about_us" href="intro.html">畫家介紹</a>
+        <li class="nav-item">
+          <a class="nav-link" id="painter_intro" href="intro.html">畫家介紹</a>
         </li>
-        <li class="nav-item mr-5">
+        <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
         </li>
-        <li class="nav-item mr-5">
+        <li class="nav-item">
             <a class="nav-link" id="nav_contact_us" href="#footer">聯絡方式</a>
         </li>
      </ul>
@@ -126,15 +126,8 @@
     <!-- Page Content 2 -->
     <section class="py-5" style="height: 500px; background-color: #e1e5ea;">
         <div class="container">
-            <div class="row d-flex justify-content-around">
-                <div class="col-4">
-                    <div class="box mt-5"></div>
-                </div>
-                <div class="col-6">
-                    <h1 class="display-4">About our services</h1>
-                    <p class="lead mt-4">The background images for the slider are set directly in the HTML using inline CSS. The images in this snippet are from <a href="https://unsplash.com">Unsplash</a>, taken by <a href="https://unsplash.com/@joannakosinska">Joanna Kosinska</a>!</p>
-                </div>
-            </div>
+            <h1 class="display-4">About our services</h1>
+            <p class="lead">The background images for the slider are set directly in the HTML using inline CSS. The images in this snippet are from <a href="https://unsplash.com">Unsplash</a>, taken by <a href="https://unsplash.com/@joannakosinska">Joanna Kosinska</a>!</p>
         </div>
     </section>
 
