--- a/intro.html
+++ b/intro.html
@@ -13,16 +13,6 @@
       body { 
         padding-top: 55px; 
       }
-      .box {
-        height: 350px;
-        background-color: gray;
-      }
-      .box2 {
-        height: 350px;
-        border-color: gray;
-        border-style: solid;
-        border-width: 2px;
-      }
       .navbar-nav .nav-link {
         font-size: 20px;
         font-family: Microsoft JhengHei;
@@ -38,6 +28,7 @@
       <!-- <img src="images/H-logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
       <span class="h3 mx-3">CBY2</span>
     </a>
+
     <!-- .navbar-toggler 漢堡式選單按鈕 -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <!-- .navbar-toggler-icon 漢堡式選單Icon -->
@@ -48,16 +39,16 @@
     <!-- 選單項目&漢堡式折疊選單 -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item mr-5">
+        <li class="nav-item">
           <a class="nav-link" id="nav_about_us" href="#about_us">關於 CBY2</a>
         </li>
-        <li class="nav-item mr-5">
-          <a class="nav-link" id="nav_about_us" href="intro.html">畫家介紹</a>
+        <li class="nav-item">
+          <a class="nav-link" id="painter_intro" href="intro.html">畫家介紹</a>
         </li>
-        <li class="nav-item mr-5">
+        <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
         </li>
-        <li class="nav-item mr-5">
+        <li class="nav-item">
             <a class="nav-link" id="nav_contact_us" href="#footer">聯絡方式</a>
         </li>
      </ul>
