--- a/a1_im1.html
+++ b/a1_im1.html
@@ -38,16 +38,16 @@
     <!-- 選單項目&漢堡式折疊選單 -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
+        <li class="nav-item mr-5">
           <a class="nav-link" id="nav_about_us" href="#about_us">關於 CBY2</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-5">
           <a class="nav-link" id="painter_intro" href="intro.html">畫家介紹</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-5">
             <a class="nav-link" href="#">Link</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-5">
             <a class="nav-link" id="nav_contact_us" href="#footer">聯絡方式</a>
         </li>
      </ul>
