--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
     <!-- .collapse.navbar-collapse 用於外層中斷點群組和隱藏導覽列內容 -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
+        <li class="nav-item mr-5">
           <a class="nav-link" id="nav_about_us" href="#about_us">關於 CBY2</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-5">
           <a class="nav-link" id="painter_intro" href="intro.html">畫家介紹</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-5">
             <a class="nav-link" href="#">Link</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-5">
             <a class="nav-link" id="nav_contact_us" href="#footer">聯絡方式</a>
         </li>
      </ul>
