--- a/intro.html
+++ b/intro.html
@@ -40,16 +40,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" id="nav_about_us" href="#about_us">關於 CBY2</a>
+          <a class="nav-link mr-5" id="nav_about_us" href="#about_us">關於 CBY2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="painter_intro" href="intro.html">畫家介紹</a>
+          <a class="nav-link mr-5" id="painter_intro" href="intro.html">畫家介紹</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link mr-5" href="#">Link</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" id="nav_contact_us" href="#footer">聯絡方式</a>
+            <a class="nav-link mr-5" id="nav_contact_us" href="#footer">聯絡方式</a>
         </li>
      </ul>
     </div>
