modify contact_us_anchor and coding style

--- a/intro.html
+++ b/intro.html
@@ -17,6 +17,12 @@
         font-size: 20px;
         font-family: Microsoft JhengHei;
       }
+      a.anchor {
+          display: block;
+          position: relative;
+          top: -60px;
+          visibility: hidden;
+      }
     </style>
 </head>
 <body>
@@ -40,7 +46,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link mr-5" id="nav_about_us" href="#about_us">關於 CBY2</a>
+          <a class="nav-link mr-5" id="nav_about_us" href="index.html">返回首頁</a>
         </li>
         <li class="nav-item">
           <a class="nav-link mr-5" id="painter_intro" href="intro.html">畫家介紹</a>
@@ -55,171 +61,168 @@
     </div>
   </nav>
 
-    <div class="container">
-        <div class="row mt-5 justify-content-center">
-            <!-- Image 1-1 -->
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-4">
-              <div class="card mx-auto"">
-              <img class="card-img-top" src="img\潘國光\c00.jpg" alt="Card image cap" height="350px">
-              <div class="card-body">
-                  <h5 class="card-title">潘國光先生</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">擅山水及花鳥畫家</h6>
-                  <p class="card-text">
-                    1942年生，江蘇省靖江市人。師從於張辛稼先生，擅長山水畫，兼花鳥畫。蘇州市美術協會理事，吳門畫院院長，蘇州中國畫  研究會副會長，蘇州吳昌碩研究會副會長。前任蘇州吳門畫苑創作室主任，院長。蘇州第七，八，九，十屆政協常委。
-                    80年代應邀赴日本講學，交流。在東京西武榮寶齋等地多次舉辦“潘國光山水畫展”。作品《松鷹圖》日本東京美術館收藏。大型山水畫《大好河山》中國海關總署收藏。作品《跑馬山雪霽》《嘉陵江畔》被江蘇美術館收藏。作品《江南夏翠》被銀川美術館收藏。作品《山水清音》被鄧散木藝術館收藏。曾出版《潘國光唐人詩意作品集》，《江南著名畫家潘國光畫集》。
-                  </p>
-                  <div class="col text-center">
-                      <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
-                  </div>
-              </div>
-              </div>
-            </div>
-
-            <!-- Image 1-2 -->
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-4">
-              <div class="card mx-auto"">
-              <img class="card-img-top" src="img\曹小欽\曹小欽-1.jpg" alt="Card image cap" height="350px">
-              <div class="card-body">
-                  <h5 class="card-title">曹小欽</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">擅山xxxxx畫家</h6>
-                  <p class="card-text">
-                    中國美術家協會會員、四川美術家協會、四川書法家協會、四川詩書畫家國際藝術交流協會會員；致公畫院副院長；香港“收藏家畫軒”專職畫師。擅長水墨人物、油畫、篆刻、書法兼長。作品多次參加國內外畫展，並有獲獎。作品被選送美、加、澳、日、東南亞等地展出，並舉辦12次個人畫展，廣為當地收藏家歡迎。代表作有《火把節系列》、《天葬系列》、《嘎曲瑪曲系列》、《牧歌系列》、《古風系列》、《人體系列》、《唐馬系列》等，並曾獲澳洲《雪梨金獎.亞太區水墨大獎賽》亞軍，加拿大《多倫多國際藝術雙年展》金獎，《海峽兩岸書畫展》一等獎，第五屆中國藝術節優秀作品獎，世博會《世紀.中國風情》；入選《世界華人書畫展》、《中國畫三百家》、《全國中國畫名家邀請展》、《新世紀杯中國畫大展》、《當代中國畫名家作品邀請展》、《今日水墨.全國中國畫名家作品巡迴展》等。其潛心研習沒骨畫和工筆劃，有意識地將工筆的細緻典雅與寫意的奔放率直、西畫的結構色彩與水墨的肌理神韻交相融合，追求著自己的獨特風格。
-                  <div class="col text-center">
-                      <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
-                  </div>
-              </div>
-              </div>
-            </div>
-
-
+  <div class="container">
+    <div class="row mt-5 justify-content-center">
+      <!-- Image 1-1 -->
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-4">
+        <div class="card mx-auto"">
+        <img class="card-img-top" src="img\潘國光\c00.jpg" alt="Card image cap" height="350px">
+        <div class="card-body">
+          <h5 class="card-title">潘國光先生</h5>
+          <h6 class="card-subtitle mb-2 text-muted">擅山水及花鳥畫家</h6>
+          <p class="card-text">
+            1942年生，江蘇省靖江市人。師從於張辛稼先生，擅長山水畫，兼花鳥畫。蘇州市美術協會理事，吳門畫院院長，蘇州中國畫  研究會副會長，蘇州吳昌碩研究會副會長。前任蘇州吳門畫苑創作室主任，院長。蘇州第七，八，九，十屆政協常委。
+            80年代應邀赴日本講學，交流。在東京西武榮寶齋等地多次舉辦“潘國光山水畫展”。作品《松鷹圖》日本東京美術館收藏。大型山水畫《大好河山》中國海關總署收藏。作品《跑馬山雪霽》《嘉陵江畔》被江蘇美術館收藏。作品《江南夏翠》被銀川美術館收藏。作品《山水清音》被鄧散木藝術館收藏。曾出版《潘國光唐人詩意作品集》，《江南著名畫家潘國光畫集》。
+          </p>
+          <div class="col text-center">
+              <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
+          </div>
         </div>
+        </div>
+      </div>
 
-
-
-
+      <!-- Image 1-2 -->
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-4">
+        <div class="card mx-auto"">
+        <img class="card-img-top" src="img\曹小欽\曹小欽-1.jpg" alt="Card image cap" height="350px">
+        <div class="card-body">
+          <h5 class="card-title">曹小欽</h5>
+          <h6 class="card-subtitle mb-2 text-muted">擅山xxxxx畫家</h6>
+          <p class="card-text">
+            中國美術家協會會員、四川美術家協會、四川書法家協會、四川詩書畫家國際藝術交流協會會員；致公畫院副院長；香港“收藏家畫軒”專職畫師。擅長水墨人物、油畫、篆刻、書法兼長。作品多次參加國內外畫展，並有獲獎。作品被選送美、加、澳、日、東南亞等地展出，並舉辦12次個人畫展，廣為當地收藏家歡迎。代表作有《火把節系列》、《天葬系列》、《嘎曲瑪曲系列》、《牧歌系列》、《古風系列》、《人體系列》、《唐馬系列》等，並曾獲澳洲《雪梨金獎.亞太區水墨大獎賽》亞軍，加拿大《多倫多國際藝術雙年展》金獎，《海峽兩岸書畫展》一等獎，第五屆中國藝術節優秀作品獎，世博會《世紀.中國風情》；入選《世界華人書畫展》、《中國畫三百家》、《全國中國畫名家邀請展》、《新世紀杯中國畫大展》、《當代中國畫名家作品邀請展》、《今日水墨.全國中國畫名家作品巡迴展》等。其潛心研習沒骨畫和工筆劃，有意識地將工筆的細緻典雅與寫意的奔放率直、西畫的結構色彩與水墨的肌理神韻交相融合，追求著自己的獨特風格。
+          <div class="col text-center">
+              <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
+          </div>
+        </div>
+        </div>
+      </div>
     </div>
+  </div>
 
 
-    <!-- Footer -->
-    <footer class="page-footer font-small indigo mt-5" id="footer" style="background-color: #e1e5ea;">
-        <!-- Footer Links -->
-        <div class="container">
-          <!-- Grid row-->
-          <div class="row text-center d-flex justify-content-center pt-5 mb-3">
+  <!-- Anchor: about us -->
+  <a class="anchor" id="contact_us_anchor"></a>
 
-            <!-- Grid column -->
-            <div class="col-md-2 mb-3">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!">About us</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
+  <!-- Footer -->
+  <footer class="page-footer font-small indigo" id="footer" style="background-color: #e1e5ea;">
+      <!-- Footer Links -->
+      <div class="container">
+        <!-- Grid row-->
+        <div class="row text-center d-flex justify-content-center pt-5 mb-3">
 
-            <!-- Grid column -->
-            <div class="col-md-2 mb-3">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!">Services</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-2 mb-3">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!">Privacy Policy</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-2 mb-3">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!">Help</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-2 mb-3">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!">Contact</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
-
+          <!-- Grid column -->
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">About us</a>
+            </h6>
           </div>
-          <!-- Grid row-->
-          <hr class="rgba-white-light" style="margin: 0 15%;">
+          <!-- Grid column -->
 
-          <!-- Grid row-->
-          <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
-
-            <!-- Grid column -->
-            <div class="col-md-8 col-12 mt-5">
-              <p style="line-height: 1.7rem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-                aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
-            </div>
-            <!-- Grid column -->
-
+          <!-- Grid column -->
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Services</a>
+            </h6>
           </div>
-          <!-- Grid row-->
-          <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
-          <!-- Grid row-->
-          <div class="row">
-            <!-- Grid column -->
-            <div class="col-md-12">
-              <div class="mb-5 flex-center">
-                <!-- Facebook -->
-                <a class="fb-ic">
-                  <i class="fab fa-facebook-f fa-lg white-text mr-4"> </i>
-                </a>
-                <!-- Twitter -->
-                <a class="tw-ic">
-                  <i class="fab fa-twitter fa-lg white-text mr-4"> </i>
-                </a>
-                <!-- Google +-->
-                <a class="gplus-ic">
-                  <i class="fab fa-google-plus-g fa-lg white-text mr-4"> </i>
-                </a>
-                <!--Linkedin -->
-                <a class="li-ic">
-                  <i class="fab fa-linkedin-in fa-lg white-text mr-4"> </i>
-                </a>
-                <!--Instagram-->
-                <a class="ins-ic">
-                  <i class="fab fa-instagram fa-lg white-text mr-4"> </i>
-                </a>
-                <!--Pinterest-->
-                <a class="pin-ic">
-                  <i class="fab fa-pinterest fa-lg white-text"> </i>
-                </a>
-              </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Privacy Policy</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Help</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Contact</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row-->
+        <hr class="rgba-white-light" style="margin: 0 15%;">
+
+        <!-- Grid row-->
+        <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+
+          <!-- Grid column -->
+          <div class="col-md-8 col-12 mt-5">
+            <p style="line-height: 1.7rem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+              aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row-->
+        <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+        <!-- Grid row-->
+        <div class="row">
+          <!-- Grid column -->
+          <div class="col-md-12">
+            <div class="mb-5 flex-center">
+              <!-- Facebook -->
+              <a class="fb-ic">
+                <i class="fab fa-facebook-f fa-lg white-text mr-4"> </i>
+              </a>
+              <!-- Twitter -->
+              <a class="tw-ic">
+                <i class="fab fa-twitter fa-lg white-text mr-4"> </i>
+              </a>
+              <!-- Google +-->
+              <a class="gplus-ic">
+                <i class="fab fa-google-plus-g fa-lg white-text mr-4"> </i>
+              </a>
+              <!--Linkedin -->
+              <a class="li-ic">
+                <i class="fab fa-linkedin-in fa-lg white-text mr-4"> </i>
+              </a>
+              <!--Instagram-->
+              <a class="ins-ic">
+                <i class="fab fa-instagram fa-lg white-text mr-4"> </i>
+              </a>
+              <!--Pinterest-->
+              <a class="pin-ic">
+                <i class="fab fa-pinterest fa-lg white-text"> </i>
+              </a>
             </div>
           </div>
         </div>
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3 pb-5">© 2019 Copyright:
-          <a href="#"> cby2</a>. All rights reserved.
-          <p class="mt-2">Designed by Jun-Hao, Chen</p>
-        </div>
-    </footer>
+      </div>
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3 pb-5">© 2019 Copyright:
+        <a href="#"> cby2</a>. All rights reserved.
+        <p class="mt-2">Designed by Jun-Hao, Chen</p>
+      </div>
+  </footer>
 
 
-    <!-- Bootstrap 4 JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script>
-      $("#nav_contact_us").click(function() {
-          var section_to = $(this).attr('href');
-          $('html, body').animate({
-            scrollTop: $(section_to).offset().top
-          }, 1000);
-      });
+  <!-- Bootstrap 4 JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+  <script>
+    $("#nav_contact_us").click(function() {
+        var section_to = $(this).attr('href');
+        $('html, body').animate({
+          scrollTop: $(section_to).offset().top
+        }, 1000);
+    });
 
-      // Mobile navbar collapse
-      $('.navbar-nav>li>a').on('click', function(){
-          $('.navbar-collapse').collapse('hide');
-      });
-    </script> 
+    // Mobile navbar collapse
+    $('.navbar-nav>li>a').on('click', function(){
+        $('.navbar-collapse').collapse('hide');
+    });
+  </script> 
 </body>
