--- a/a1_im1.html
+++ b/a1_im1.html
@@ -10,13 +10,19 @@
     <script src="static/js/jquery-3.3.1.js"></script>
     <!-- CSS Block -->
     <style>
-        body { 
-          padding-top: 55px; 
-        }
-        .navbar-nav .nav-link {
-          font-size: 20px;
-          font-family: Microsoft JhengHei;
-        }
+      body { 
+        padding-top: 55px; 
+      }
+      .navbar-nav .nav-link {
+        font-size: 20px;
+        font-family: Microsoft JhengHei;
+      }
+      a.anchor {
+          display: block;
+          position: relative;
+          top: -60px;
+          visibility: hidden;
+      }
     </style>
 </head>
 <body>
@@ -39,7 +45,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item mr-5">
-          <a class="nav-link" id="nav_about_us" href="#about_us">關於 CBY2</a>
+          <a class="nav-link" id="nav_about_us" href="index.html">返回首頁</a>
         </li>
         <li class="nav-item mr-5">
           <a class="nav-link" id="painter_intro" href="intro.html">畫家介紹</a>
@@ -56,122 +62,123 @@
 
 
 
-    <!--  -->
-    <div class="container">
-        <h2 class="mt-5 text-center" style="color: #343a40;">Painting Title </h2>
-        <div class="row justify-content-center mt-5">
-          <img src="圖片/ss.jpg" alt="">
-        </div>
-    </div>
+  <!--  -->
+  <div class="container">
+      <h2 class="mt-5 text-center" style="color: #343a40;">Painting Title </h2>
+      <div class="row justify-content-center mt-5">
+        <img src="圖片/ss.jpg" alt="">
+      </div>
+  </div>
 
 
 
+  <!-- Anchor: about us -->
+  <a class="anchor" id="contact_us_anchor"></a>
 
+  <!-- Footer -->
+  <footer class="page-footer font-small indigo" id="footer" style="background-color: #e1e5ea;">
+      <!-- Footer Links -->
+      <div class="container">
+        <!-- Grid row-->
+        <div class="row text-center d-flex justify-content-center pt-5 mb-3">
 
-    <!-- Footer -->
-    <footer class="page-footer font-small indigo mt-5" id="footer" style="background-color: #e1e5ea;">
-        <!-- Footer Links -->
-        <div class="container">
-          <!-- Grid row-->
-          <div class="row text-center d-flex justify-content-center pt-5 mb-3">
-
-            <!-- Grid column -->
-            <div class="col-md-2 mb-3">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!">About us</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-2 mb-3">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!">Services</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-2 mb-3">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!">Privacy Policy</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-2 mb-3">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!">Help</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-2 mb-3">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!">Contact</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
-
+          <!-- Grid column -->
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">About us</a>
+            </h6>
           </div>
-          <!-- Grid row-->
-          <hr class="rgba-white-light" style="margin: 0 15%;">
+          <!-- Grid column -->
 
-          <!-- Grid row-->
-          <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
-
-            <!-- Grid column -->
-            <div class="col-md-8 col-12 mt-5">
-              <p style="line-height: 1.7rem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-                aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
-            </div>
-            <!-- Grid column -->
-
+          <!-- Grid column -->
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Services</a>
+            </h6>
           </div>
-          <!-- Grid row-->
-          <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
-          <!-- Grid row-->
-          <div class="row">
-            <!-- Grid column -->
-            <div class="col-md-12">
-              <div class="mb-5 flex-center">
-                <!-- Facebook -->
-                <a class="fb-ic">
-                  <i class="fab fa-facebook-f fa-lg white-text mr-4"> </i>
-                </a>
-                <!-- Twitter -->
-                <a class="tw-ic">
-                  <i class="fab fa-twitter fa-lg white-text mr-4"> </i>
-                </a>
-                <!-- Google +-->
-                <a class="gplus-ic">
-                  <i class="fab fa-google-plus-g fa-lg white-text mr-4"> </i>
-                </a>
-                <!--Linkedin -->
-                <a class="li-ic">
-                  <i class="fab fa-linkedin-in fa-lg white-text mr-4"> </i>
-                </a>
-                <!--Instagram-->
-                <a class="ins-ic">
-                  <i class="fab fa-instagram fa-lg white-text mr-4"> </i>
-                </a>
-                <!--Pinterest-->
-                <a class="pin-ic">
-                  <i class="fab fa-pinterest fa-lg white-text"> </i>
-                </a>
-              </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Privacy Policy</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Help</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 mb-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Contact</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row-->
+        <hr class="rgba-white-light" style="margin: 0 15%;">
+
+        <!-- Grid row-->
+        <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+
+          <!-- Grid column -->
+          <div class="col-md-8 col-12 mt-5">
+            <p style="line-height: 1.7rem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+              aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row-->
+        <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+        <!-- Grid row-->
+        <div class="row">
+          <!-- Grid column -->
+          <div class="col-md-12">
+            <div class="mb-5 flex-center">
+              <!-- Facebook -->
+              <a class="fb-ic">
+                <i class="fab fa-facebook-f fa-lg white-text mr-4"> </i>
+              </a>
+              <!-- Twitter -->
+              <a class="tw-ic">
+                <i class="fab fa-twitter fa-lg white-text mr-4"> </i>
+              </a>
+              <!-- Google +-->
+              <a class="gplus-ic">
+                <i class="fab fa-google-plus-g fa-lg white-text mr-4"> </i>
+              </a>
+              <!--Linkedin -->
+              <a class="li-ic">
+                <i class="fab fa-linkedin-in fa-lg white-text mr-4"> </i>
+              </a>
+              <!--Instagram-->
+              <a class="ins-ic">
+                <i class="fab fa-instagram fa-lg white-text mr-4"> </i>
+              </a>
+              <!--Pinterest-->
+              <a class="pin-ic">
+                <i class="fab fa-pinterest fa-lg white-text"> </i>
+              </a>
             </div>
           </div>
         </div>
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3 pb-5">© 2019 Copyright:
-          <a href="#"> cby2</a>. All rights reserved.
-          <p class="mt-2">Designed by Jun-Hao, Chen</p>
-        </div>
-    </footer>
+      </div>
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3 pb-5">© 2019 Copyright:
+        <a href="#"> cby2</a>. All rights reserved.
+        <p class="mt-2">Designed by Jun-Hao, Chen</p>
+      </div>
+  </footer>
 
 
     <!-- Bootstrap 4 JS -->
