--- a/intro3.html
+++ b/intro3.html
@@ -66,16 +66,18 @@
       <!-- Author 1-1 -->
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-1">
         <div class="card mx-auto"">
-        <img class="card-img-top" src=".\圖片\01朱常棣\朱老600-600.jpg" alt="Card image cap" height="350px">
+        <img class="card-img-top" src=".\圖片\07彭懋先\彭600-600.jpg" alt="Card image cap" height="350px">
         <div class="card-body">
           <h6 class="card-title">繁體中文說明：</h6>
           <p class="card-text">
-            朱常棣，1938年生於重慶市。現為中國美術家協會會員，國家一級美術師，四川省美術家協會理事，四川省美術家協會中國畫藝委會顧問，四川省美術家協會山水畫會會長，成都市美術家協會榮譽主席，成都市委統戰部蜀都書畫院副院長，成都市政協書畫院副院長等。近期二次展覽，2018年3月24日，由中國美術家協會藝委會，四川省文學藝術界聯合會，四川省美術家協會，成都市文學藝術界聯合會，成都市美術家協會主辦，北京寶島婦產醫院承辦，四川省巴蜀畫派促進會協辦「大山大水大美四川-巴山蜀水」朱常棣中國畫展。2018年8月19日，朱常棣以「巴山蜀水」中國畫展慶八十壽辰在四川美術館展出。
+            彭懋先，1946年生於四川成都。中國美術家協會會員、四川省美術家協會會員、四川詩書畫家國際藝術交流協會會員、四川省中國畫研究院畫師、
+            成都市美術家協會理事、都江堰錦江書畫院榮譽院長。作品多次入選中國美協主辦的展覽並有獲獎，參加省、市美協及文化部門有重大影響的畫展並多次獲獎。作品選送至荷蘭、比利時、日本、澳大利亞、新加坡、美國等國家及香港、澳門展出並為一些文化機構收藏。
           </p>
 
           <h6 class="card-title">简体中文说明：</h6>
           <p class="card-text">
-            朱常棣，1938年生于重庆市。现为中国美术家协会会员，国家一级美术师，四川省美术家协会理事，四川省美术家协会中国画艺委会顾问，四川省美术家协会山水画会会长，成都市美术家协会荣誉主席，成都市委统战部蜀都书画院副院长，成都市政协书画院副院长等。近期二次展览，2018年3月24日，由中国美术家协会艺委会，四川省文学艺术界联合会，四川省美术家协会，成都市文学艺术界联合会，成都市美术家协会主办，北京宝岛妇产医院承办，四川省巴蜀画派促进会协办「大山大水大美四川-巴山蜀水」朱常棣中国画展。 2018年8月19日，朱常棣以「巴山蜀水」中国画展庆八十寿辰在四川美术馆展出。
+            彭懋先，1946年生于四川成都。中国美术家协会会员、四川省美术家协会会员、四川诗书画家国际艺术交流协会会员、四川省中国画研究院画师、
+            成都市美术家协会理事、都江堰锦江书画院荣誉院长。作品多次入选中国美协主办的展览并有获奖，参加省、市美协及文化部门有重大影响的画展并多次获奖。作品选送至荷兰、比利时、日本、澳大利亚、新加坡、美国等国家及香港、澳门展出并为一些文化机构收藏。
           </p>
           <div class="col text-center">
               <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
@@ -86,16 +88,16 @@
       <!-- Author 1-2 -->
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-1">
         <div class="card mx-auto"">
-        <img class="card-img-top" src=".\圖片\02楊長槐\楊600-600.jpg" alt="Card image cap" height="350px">
+        <img class="card-img-top" src=".\圖片\08刁华甫\刁600-600.jpg" alt="Card image cap" height="350px">
         <div class="card-body">
           <h6 class="card-title">繁體中文說明 :</h6>
           <p class="card-text">
-            楊長槐，侗族，貴州天柱人，1938年12月出生。師從孟光濤、宋吟可、王漁父、方小石，1963年畢業於貴州大學藝術系。中國美協三、四、五屆理事，貴州省美協三、四屆主席，中國文聯六、七、八屆委員。 1983年至2008年，歷任貴州省文聯秘書長、副主席、主席，貴州省文聯黨組副書記、書記，中共貴州省委候補委員，中華人民共和國第九、十屆全國人民代表大會常務委員會委員和全國人大民族委員會委員。曾任全國第八屆美展總評委。現為中國文聯委員、中國國家畫院楊長槐山水畫工作室導師、中國德泰書畫院院長、貴州省文聯主席、貴州省美協名譽主席、國家一級美術師。2015年9月25日因病醫治無效，於家中去世，享年78歲。
+            刁華甫，1942年生于四川成都，1961年畢業成都美術學校，授教於週掄園、陳亮清、陳子莊、諸先生。現任四川國防詩書畫院院長，中國國畫家協會理事，中國美術家協會四川分會會員，國家二級美術師，四川省現代藝術促進會書畫委員會副主席、成都錦水書畫院副院長兼秘書長、中原書畫研究院客座教授、台灣國寶畫院客座教授，2000年被授予中國百傑畫家。作品《十八羅漢》、《竹林七賢》參加迎接新世紀當代中國畫扇面精品專場榮寶藝術品拍賣公司拍賣會，一舉成功。
           </p>
 
           <h6 class="card-title">简体中文说明 :</h6>
           <p class="card-text">
-            杨长槐，侗族，贵州天柱人，1938年12月出生。师从孟光涛、宋吟可、王渔父、方小石，1963年毕业于贵州大学艺术系。中国美协三、四、五届理事，贵州省美协三、四届主席，中国文联六、七、八届委员。 1983年至2008年，历任贵州省文联秘书长、副主席、主席，贵州省文联党组副书记、书记，中共贵州省委候补委员，中华人民共和国第九、十届全国人民代表大会常务委员会委员和全国人大民族委员会委员。曾任全国第八届美展总评委。现为中国文联委员、中国国家画院杨长槐山水画工作室导师、中国德泰书画院院长、贵州省文联主席、贵州省美协名誉主席、国家一级美术师。2015年9月25日因病医治无效，于家中去世，享年78岁。
+            刁华甫，1942年生于四川成都，1961年毕业成都美术学校，授教于周抡园、陈亮清、陈子庄、诸先生。现任四川国防诗书画院院长，中国国画家协会理事，中国美术家协会四川分会会员，国家二级美术师，四川省现代艺术促进会书画委员会副主席、成都锦水书画院副院长兼秘书长、中原书画研究院客座教授、台湾国宝画院客座教授，2000年被授予中国百杰画家。作品《十八罗汉》、《竹林七贤》参加迎接新世纪当代中国画扇面精品专场荣宝艺术品拍卖公司拍卖会，一举成功。
           </p>          
           <div class="col text-center">
               <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
@@ -106,16 +108,16 @@
       <!-- Author 1-3 -->
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-1">
         <div class="card mx-auto"">
-        <img class="card-img-top" src=".\圖片\03劉定一\劉600-600.jpg" alt="Card image cap" height="350px">
+        <img class="card-img-top" src=".\圖片\09朱勝利\朱600-600.jpg" alt="Card image cap" height="350px">
         <div class="card-body">
           <h6 class="card-title">繁體中文說明 :</h6>
           <p class="card-text">
-            劉定一，1946年生，陝西綏德人。著名中國畫家。1971年至1979年在貴州省錦屏縣文化館從事美術工作，1979年至今在貴州省美術家協會工作，曾任貴州省美術家協會秘書長。劉定一出生書香門第，名流世家，自幼受家庭影響喜愛翰墨丹青。主攻花鳥畫，技法上註重學習古今名家，受方小石影響尤深。其作品豐潤，秀雅。現為貴州省美術家協會常務副主席兼秘書，中國美術家協會會員，國家一級美術師。
+            朱勝利，1948年生，河北省任丘縣人，中國美術家協會會員、湖南省美術家協會理事、湖南省美術館館長、湖南省國畫館館長，國家一級美術師，作品多次參加全國美術作品展覽，個人簡歷入編《當代美術家名人錄》、《現代美術家人名大辭典》。朱勝利藝海泛船，朝夕研摹，花鳥，人物，山水無不涉獵尤工人物，畫風工而不板，細而不膩，造型生動，具有地方特色的時代氣息。
           </p>
 
           <h6 class="card-title">简体中文说明 :</h6>
           <p class="card-text">
-            刘定一，1946年生，陕西绥德人。著名中国画家。 1971年至1979年在贵州省锦屏县文化馆从事美术工作，1979年至今在贵州省美术家协会工作，曾任贵州省美术家协会秘书长。刘定一出生书香门第，名流世家，自幼受家庭影响喜爱翰墨丹青。主攻花鸟画，技法上注重学习古今名家，受方小石影响尤深。其作品丰润，秀雅。现为贵州省美术家协会常务副主席兼秘书，中国美术家协会会员，国家一级美术师。
+            朱胜利，1948年生，河北省任丘县人，中国美术家协会会员、湖南省美术家协会理事、湖南省美术馆馆长、湖南省国画馆馆长，国家一级美术师，作品多次参加全国美术作品展览，个人简历入编《当代美术家名人录》、《现代美术家人名大辞典》。朱胜利艺海泛船，朝夕研摹，花鸟，人物，山水无不涉猎尤工人物，画风工而不板，细而不腻，造型生动，具有地方特色的时代气息。
           </p>          
           <div class="col text-center">
               <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
