--- a/intro4.html
+++ b/intro4.html
@@ -66,16 +66,16 @@
       <!-- Author 1-1 -->
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-1">
         <div class="card mx-auto"">
-        <img class="card-img-top" src=".\圖片\01朱常棣\朱老600-600.jpg" alt="Card image cap" height="350px">
+        <img class="card-img-top" src=".\圖片\10鄧由懷\鄧600-600.jpg" alt="Card image cap" height="350px">
         <div class="card-body">
           <h6 class="card-title">繁體中文說明：</h6>
           <p class="card-text">
-            朱常棣，1938年生於重慶市。現為中國美術家協會會員，國家一級美術師，四川省美術家協會理事，四川省美術家協會中國畫藝委會顧問，四川省美術家協會山水畫會會長，成都市美術家協會榮譽主席，成都市委統戰部蜀都書畫院副院長，成都市政協書畫院副院長等。近期二次展覽，2018年3月24日，由中國美術家協會藝委會，四川省文學藝術界聯合會，四川省美術家協會，成都市文學藝術界聯合會，成都市美術家協會主辦，北京寶島婦產醫院承辦，四川省巴蜀畫派促進會協辦「大山大水大美四川-巴山蜀水」朱常棣中國畫展。2018年8月19日，朱常棣以「巴山蜀水」中國畫展慶八十壽辰在四川美術館展出。
+            鄧由懷，1942年生於四川仁壽，自號禪千、虛竹齋主人。先後師從“大風堂”門人王永年、龍國屏，系藝術巨匠張大千先生之傳人。幼承家學，工山水，擅書法，尤鍾情巴蜀山川風物，欣欣然極富生意，其韻致迥異於同道而別具一格，被譽為巴蜀鄉土風情畫家。其作品多次入展全國、省級大展且有獲獎，亦被國內外有識之士收藏。現為中國美術家協會會員、四川省美術家協會會員、四川巴蜀中國畫研究院畫師、四川大風堂畫院藝術總監、成都張大千畫院副院長、四川省“五一”文學藝術獎章兩屆獲得者。
           </p>
 
           <h6 class="card-title">简体中文说明：</h6>
           <p class="card-text">
-            朱常棣，1938年生于重庆市。现为中国美术家协会会员，国家一级美术师，四川省美术家协会理事，四川省美术家协会中国画艺委会顾问，四川省美术家协会山水画会会长，成都市美术家协会荣誉主席，成都市委统战部蜀都书画院副院长，成都市政协书画院副院长等。近期二次展览，2018年3月24日，由中国美术家协会艺委会，四川省文学艺术界联合会，四川省美术家协会，成都市文学艺术界联合会，成都市美术家协会主办，北京宝岛妇产医院承办，四川省巴蜀画派促进会协办「大山大水大美四川-巴山蜀水」朱常棣中国画展。 2018年8月19日，朱常棣以「巴山蜀水」中国画展庆八十寿辰在四川美术馆展出。
+            邓由怀，1942年生于四川仁寿，自号禅千、虚竹斋主人。先后师从“大风堂”门人王永年、龙国屏，系艺术巨匠张大千先生之传人。幼承家学，工山水，擅书法，尤钟情巴蜀山川风物，欣欣然极富生意，其韵致迥异于同道而别具一格，被誉为巴蜀乡土风情画家。其作品多次入展全国、省级大展且有获奖，亦被国内外有识之士收藏。现为中国美术家协会会员、四川省美术家协会会员、四川巴蜀中国画研究院画师、四川大风堂画院艺术总监、成都张大千画院副院长、四川省“五一”文学艺术奖章两届获得者。
           </p>
           <div class="col text-center">
               <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
@@ -86,16 +86,28 @@
       <!-- Author 1-2 -->
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-1">
         <div class="card mx-auto"">
-        <img class="card-img-top" src=".\圖片\02楊長槐\楊600-600.jpg" alt="Card image cap" height="350px">
+        <img class="card-img-top" src=".\圖片\11林月光\林600-600.jpg" alt="Card image cap" height="350px">
         <div class="card-body">
           <h6 class="card-title">繁體中文說明 :</h6>
           <p class="card-text">
-            楊長槐，侗族，貴州天柱人，1938年12月出生。師從孟光濤、宋吟可、王漁父、方小石，1963年畢業於貴州大學藝術系。中國美協三、四、五屆理事，貴州省美協三、四屆主席，中國文聯六、七、八屆委員。 1983年至2008年，歷任貴州省文聯秘書長、副主席、主席，貴州省文聯黨組副書記、書記，中共貴州省委候補委員，中華人民共和國第九、十屆全國人民代表大會常務委員會委員和全國人大民族委員會委員。曾任全國第八屆美展總評委。現為中國文聯委員、中國國家畫院楊長槐山水畫工作室導師、中國德泰書畫院院長、貴州省文聯主席、貴州省美協名譽主席、國家一級美術師。2015年9月25日因病醫治無效，於家中去世，享年78歲。
+            林月光，1957年12月出生於廣東汕頭市。1981年畢業於廣東輕工業學校工藝美術專業，現為汕頭特區《工商時報》美術編輯。中國美術家協會會員，汕頭美術家協會副主席，汕頭畫院畫師，汕頭中國畫院畫師。其作品獲獎無數略以：
+            1994年8月 水粉連環畫《成功的試驗》入第八屆全國美展“盈福杯”銅獎。
+            1996年3月 《閩海姐妹》入選第三屆全國水彩、水粉畫展。
+            1997年3月 《侗家母親》入選全國中國畫人物畫展。
+            2000年 《晚秋》獲第二屆廣東省中國畫展銀獎。
+            2002年 《古巷》入選第三屆廣東中國畫展。
+            並曾在新加坡及福州、廈門、深圳等地和台灣展出。
           </p>
 
           <h6 class="card-title">简体中文说明 :</h6>
           <p class="card-text">
-            杨长槐，侗族，贵州天柱人，1938年12月出生。师从孟光涛、宋吟可、王渔父、方小石，1963年毕业于贵州大学艺术系。中国美协三、四、五届理事，贵州省美协三、四届主席，中国文联六、七、八届委员。 1983年至2008年，历任贵州省文联秘书长、副主席、主席，贵州省文联党组副书记、书记，中共贵州省委候补委员，中华人民共和国第九、十届全国人民代表大会常务委员会委员和全国人大民族委员会委员。曾任全国第八届美展总评委。现为中国文联委员、中国国家画院杨长槐山水画工作室导师、中国德泰书画院院长、贵州省文联主席、贵州省美协名誉主席、国家一级美术师。2015年9月25日因病医治无效，于家中去世，享年78岁。
+            林月光，1957年12月出生于广东汕头市。1981年毕业于广东轻工业学校工艺美术专业，现为汕头特区《工商时报》美术编辑。中国美术家协会会员，汕头美术家协会副主席，汕头画院画师，汕头中国画院画师。其作品获奖无数略以：
+            1994年8月 水粉连环画《成功的试验》入第八届全国美展“盈福杯”铜奖。
+            1996年3月 《闽海姐妹》入选第三届全国水彩、水粉画展。
+            1997年3月 《侗家母亲》入选全国中国画人物画展。
+            2000年 《晚秋》获第二届广东省中国画展银奖。
+            2002年 《古巷》入选第三届广东中国画展。
+            并曾在新加坡及福州、厦门、深圳等地和台湾展出。
           </p>          
           <div class="col text-center">
               <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
@@ -106,16 +118,16 @@
       <!-- Author 1-3 -->
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-1">
         <div class="card mx-auto"">
-        <img class="card-img-top" src=".\圖片\03劉定一\劉600-600.jpg" alt="Card image cap" height="350px">
+        <img class="card-img-top" src=".\圖片\12潘國光\潘600-600.jpg" alt="Card image cap" height="350px">
         <div class="card-body">
           <h6 class="card-title">繁體中文說明 :</h6>
           <p class="card-text">
-            劉定一，1946年生，陝西綏德人。著名中國畫家。1971年至1979年在貴州省錦屏縣文化館從事美術工作，1979年至今在貴州省美術家協會工作，曾任貴州省美術家協會秘書長。劉定一出生書香門第，名流世家，自幼受家庭影響喜愛翰墨丹青。主攻花鳥畫，技法上註重學習古今名家，受方小石影響尤深。其作品豐潤，秀雅。現為貴州省美術家協會常務副主席兼秘書，中國美術家協會會員，國家一級美術師。
+            潘國光，1942年生，江蘇省靖江市人。師從於張辛稼先生，擅長山水畫，兼花鳥畫。蘇州市美術協會理事，吳門畫院院長，蘇州中國畫研究會副會長，蘇州吳昌碩研究會副會長。前任蘇州吳門畫苑創作室主任，院長。蘇州第七，八，九，十屆政協常委。80年代應邀赴日本講學，交流。在東京西武榮寶齋等地多次舉辦“潘國光山水畫展”。作品《松鷹圖》日本東京美術館收藏。大型山水畫《大好河山》中國海關總署收藏。作品《跑馬山雪霽》《嘉陵江畔》被江蘇美術館收藏等等。曾出版《潘國光唐人詩意作品集》，《江南著名畫家潘國光畫集》。
           </p>
 
           <h6 class="card-title">简体中文说明 :</h6>
           <p class="card-text">
-            刘定一，1946年生，陕西绥德人。著名中国画家。 1971年至1979年在贵州省锦屏县文化馆从事美术工作，1979年至今在贵州省美术家协会工作，曾任贵州省美术家协会秘书长。刘定一出生书香门第，名流世家，自幼受家庭影响喜爱翰墨丹青。主攻花鸟画，技法上注重学习古今名家，受方小石影响尤深。其作品丰润，秀雅。现为贵州省美术家协会常务副主席兼秘书，中国美术家协会会员，国家一级美术师。
+            潘国光，1942年生，江苏省靖江市人。师从于张辛稼先生，擅长山水画，兼花鸟画。苏州市美术协会理事，吴门画院院长，苏州中国画研究会副会长，苏州吴昌硕研究会副会长。前任苏州吴门画苑创作室主任，院长。苏州第七，八，九，十届政协常委。 80年代应邀赴日本讲学，交流。在东京西武荣宝斋等地多次举办“潘国光山水画展”。作品《松鹰图》日本东京美术馆收藏。大型山水画《大好河山》中国海关总署收藏。作品《跑马山雪霁》《嘉陵江畔》被江苏美术馆收藏等等。曾出版《潘国光唐人诗意作品集》，《江南著名画家潘国光画集》。
           </p>          
           <div class="col text-center">
               <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
