--- a/intro2.html
+++ b/intro2.html
@@ -66,16 +66,16 @@
       <!-- Author 1-1 -->
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-1">
         <div class="card mx-auto"">
-        <img class="card-img-top" src=".\圖片\01朱常棣\朱老600-600.jpg" alt="Card image cap" height="350px">
+        <img class="card-img-top" src=".\圖片\04周元澤\周600-600.jpg" alt="Card image cap" height="350px">
         <div class="card-body">
           <h6 class="card-title">繁體中文說明：</h6>
           <p class="card-text">
-            朱常棣，1938年生於重慶市。現為中國美術家協會會員，國家一級美術師，四川省美術家協會理事，四川省美術家協會中國畫藝委會顧問，四川省美術家協會山水畫會會長，成都市美術家協會榮譽主席，成都市委統戰部蜀都書畫院副院長，成都市政協書畫院副院長等。近期二次展覽，2018年3月24日，由中國美術家協會藝委會，四川省文學藝術界聯合會，四川省美術家協會，成都市文學藝術界聯合會，成都市美術家協會主辦，北京寶島婦產醫院承辦，四川省巴蜀畫派促進會協辦「大山大水大美四川-巴山蜀水」朱常棣中國畫展。2018年8月19日，朱常棣以「巴山蜀水」中國畫展慶八十壽辰在四川美術館展出。
+            周元澤，1950年出生，四川成都市人。喜作寫意花鳥畫，尤擅畫猴，形成自己獨特的藝術情趣，師從著名畫家孫竹籬、張士瑩先生。其作吸收了傳統文化的精髓，並溶入了現代的思維構成，其筆下的禽鳥動態可愛、趣味盎然，“筆簡意濃、奔放凝重、稚拙清雅”的藝術風格。出版有《國畫簡筆劃》、《周元澤作品集》。作品入編《四川八人新作選》《四川中國畫精品選》。傳略編入《世界美術家傳》。現為四川省美術家協會、四川詩書畫家國際藝術交流協會會員，成都市美術家協會會員，香港當代藝術中心、馬來西亞藝術交流中心特聘藝術家。
           </p>
 
           <h6 class="card-title">简体中文说明：</h6>
           <p class="card-text">
-            朱常棣，1938年生于重庆市。现为中国美术家协会会员，国家一级美术师，四川省美术家协会理事，四川省美术家协会中国画艺委会顾问，四川省美术家协会山水画会会长，成都市美术家协会荣誉主席，成都市委统战部蜀都书画院副院长，成都市政协书画院副院长等。近期二次展览，2018年3月24日，由中国美术家协会艺委会，四川省文学艺术界联合会，四川省美术家协会，成都市文学艺术界联合会，成都市美术家协会主办，北京宝岛妇产医院承办，四川省巴蜀画派促进会协办「大山大水大美四川-巴山蜀水」朱常棣中国画展。 2018年8月19日，朱常棣以「巴山蜀水」中国画展庆八十寿辰在四川美术馆展出。
+            周元泽，1950年出生，四川成都市人。喜作写意花鸟画，尤擅画猴，形成自己独特的艺术情趣，师从著名画家孙竹篱、张士莹先生。其作吸收了传统文化的精髓，并溶入了现代的思维构成，其笔下的禽鸟动态可爱、趣味盎然，“笔简意浓、奔放凝重、稚拙清雅”的艺术风格。出版有《国画简笔划》、《周元泽作品集》。作品入编《四川八人新作选》《四川中国画精品选》。传略编入《世界美术家传》。现为四川省美术家协会、四川诗书画家国际艺术交流协会会员，成都市美术家协会会员，香港当代艺术中心、马来西亚艺术交流中心特聘艺术家。
           </p>
           <div class="col text-center">
               <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
@@ -86,16 +86,16 @@
       <!-- Author 1-2 -->
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-1">
         <div class="card mx-auto"">
-        <img class="card-img-top" src=".\圖片\02楊長槐\楊600-600.jpg" alt="Card image cap" height="350px">
+        <img class="card-img-top" src=".\圖片\05戴衛\戴600-600.jpg" alt="Card image cap" height="350px">
         <div class="card-body">
           <h6 class="card-title">繁體中文說明 :</h6>
           <p class="card-text">
-            楊長槐，侗族，貴州天柱人，1938年12月出生。師從孟光濤、宋吟可、王漁父、方小石，1963年畢業於貴州大學藝術系。中國美協三、四、五屆理事，貴州省美協三、四屆主席，中國文聯六、七、八屆委員。 1983年至2008年，歷任貴州省文聯秘書長、副主席、主席，貴州省文聯黨組副書記、書記，中共貴州省委候補委員，中華人民共和國第九、十屆全國人民代表大會常務委員會委員和全國人大民族委員會委員。曾任全國第八屆美展總評委。現為中國文聯委員、中國國家畫院楊長槐山水畫工作室導師、中國德泰書畫院院長、貴州省文聯主席、貴州省美協名譽主席、國家一級美術師。2015年9月25日因病醫治無效，於家中去世，享年78歲。
+            戴衛，1943年生，四川成都市人。畢業於四川美術學院附中，為中外名著作插圖。1982年到文化部中國畫研究院深造，得到李可染、蔡若虹、黃冑指授。1989年調四川詩書畫院從事專業創作，並任該院副院長，學術帶頭人。出版有《戴衛書藉裝幀插圖畫集》《大畫家叢書戴衛》專集，《戴衛藝術•中國畫集•書法篆刻集•藝術人生集》三卷，作品入錄《中國現代美術全集》等。現為四川省詩書畫院名譽院長，四川省美術家協會顧問，四川省巴蜀畫派促進會名譽會長，中國畫學會常務理事，中國國家畫院研究員，國務院津貼專家。
           </p>
 
           <h6 class="card-title">简体中文说明 :</h6>
           <p class="card-text">
-            杨长槐，侗族，贵州天柱人，1938年12月出生。师从孟光涛、宋吟可、王渔父、方小石，1963年毕业于贵州大学艺术系。中国美协三、四、五届理事，贵州省美协三、四届主席，中国文联六、七、八届委员。 1983年至2008年，历任贵州省文联秘书长、副主席、主席，贵州省文联党组副书记、书记，中共贵州省委候补委员，中华人民共和国第九、十届全国人民代表大会常务委员会委员和全国人大民族委员会委员。曾任全国第八届美展总评委。现为中国文联委员、中国国家画院杨长槐山水画工作室导师、中国德泰书画院院长、贵州省文联主席、贵州省美协名誉主席、国家一级美术师。2015年9月25日因病医治无效，于家中去世，享年78岁。
+            戴卫，1943年生，四川成都市人。毕业于四川美术学院附中，为中外名著作插图。1982年到文化部中国画研究院深造，得到李可染、蔡若虹、黄胄指授。1989年调四川诗书画院从事专业创作，并任该院副院长，学术带头人。出版有《戴卫书借装帧插图画集》《大画家丛书戴卫》专集，《戴卫艺术•中国画集•书法篆刻集•艺术人生集》三卷，作品入录《中国现代美术全集》等。现为四川省诗书画院名誉院长，四川省美术家协会顾问，四川省巴蜀画派促进会名誉会长，中国画学会常务理事，中国国家画院研究员，国务院津贴专家。
           </p>          
           <div class="col text-center">
               <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
@@ -106,16 +106,16 @@
       <!-- Author 1-3 -->
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mt-1">
         <div class="card mx-auto"">
-        <img class="card-img-top" src=".\圖片\03劉定一\劉600-600.jpg" alt="Card image cap" height="350px">
+        <img class="card-img-top" src=".\圖片\06梅凱\梅600-600.jpg" alt="Card image cap" height="350px">
         <div class="card-body">
           <h6 class="card-title">繁體中文說明 :</h6>
           <p class="card-text">
-            劉定一，1946年生，陝西綏德人。著名中國畫家。1971年至1979年在貴州省錦屏縣文化館從事美術工作，1979年至今在貴州省美術家協會工作，曾任貴州省美術家協會秘書長。劉定一出生書香門第，名流世家，自幼受家庭影響喜愛翰墨丹青。主攻花鳥畫，技法上註重學習古今名家，受方小石影響尤深。其作品豐潤，秀雅。現為貴州省美術家協會常務副主席兼秘書，中國美術家協會會員，國家一級美術師。
+            梅凱，1946年11月生於天津，定居成都。現任四川美術家協會理事，四川中國畫研究院副院長，中國美術家協會會員，中國畫壇百傑畫家，以人物畫著稱。在畫法上大膽創新，與時俱進，被譽為“秉漢唐之浩氣，融西畫之精微”。1997年榮獲中國文聯、中國美協頒發的“’97中國畫壇百傑畫家”稱號等。多次參加全國、省、市畫展，作品被國家和紀念館及藝術機構或個人收藏。
           </p>
 
           <h6 class="card-title">简体中文说明 :</h6>
           <p class="card-text">
-            刘定一，1946年生，陕西绥德人。著名中国画家。 1971年至1979年在贵州省锦屏县文化馆从事美术工作，1979年至今在贵州省美术家协会工作，曾任贵州省美术家协会秘书长。刘定一出生书香门第，名流世家，自幼受家庭影响喜爱翰墨丹青。主攻花鸟画，技法上注重学习古今名家，受方小石影响尤深。其作品丰润，秀雅。现为贵州省美术家协会常务副主席兼秘书，中国美术家协会会员，国家一级美术师。
+            梅凯，1946年11月生于天津，定居成都。现任四川美术家协会理事，四川中国画研究院副院长，中国美术家协会会员，中国画坛百杰画家，以人物画著称。在画法上大胆创新，与时俱进，被誉为“秉汉唐之浩气，融西画之精微”。1997年荣获中国文联、中国美协颁发的“’97中国画坛百杰画家”称号等。多次参加全国、省、市画展，作品被国家和纪念馆及艺术机构或个人收藏。
           </p>          
           <div class="col text-center">
               <a class="btn btn-outline-secondary btn-lg btn-block" href="author1.html" role="button">點擊進入畫作頁面</a>
